<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/inicio"
            android:icon="@drawable/home_icon"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/departamentos"
            android:icon="@drawable/departments_icon"
            android:title="@string/menu_departamentos" />
        <!--<item
            android:id="@+id/equipos"
            android:icon="@drawable/teams_icon"
            android:title="@string/menu_equipos" />-->
        <item
            android:id="@+id/proyectos"
            android:icon="@drawable/projects_icon"
            android:title="@string/menu_proyectos" />
        <item
            android:id="@+id/clientes"
            android:icon="@drawable/clients_icon"
            android:title="@string/menu_clientes" />
        <item
            android:id="@+id/empleados"
            android:icon="@drawable/workers_icon"
            android:title="@string/menu_empleados" />
    </group>
</menu>